--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-# ----------------------------------------
+# =======================================
 # Orquestração
-apache-airflow==2.5.1
+apache-airflow[postgres]==2.8.4          # pendulum 3+ já OK com Py3.11
 
-# Conexão com PostgreSQL
+# ---------------------------------------
+# Conexão PostgreSQL (já incluída no extra [postgres], mas explícita não faz mal)
 psycopg2-binary==2.9.9
-# SQLAlchemy 1.4.x é compatível com pandas 1.5.x
-SQLAlchemy>=1.4, <1.5
 
-# Leitura de Excel
-openpyxl>=3.1
+# ---------------------------------------
+# ORM
+SQLAlchemy>=1.4,<2.0                    # Airflow 2.x não suporta SQLAlchemy 2
 
-# Manipulação de dados
-pandas>=1.5,<1.6
-numpy>=1.26
+# ---------------------------------------
+# Leitura Excel
+openpyxl>=3.1,<3.3
 
+# ---------------------------------------
 # API
-fastapi>=0.110
-uvicorn[standard]>=0.27
+fastapi>=0.110,<0.113
+uvicorn[standard]>=0.27,<0.29
