--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-# =======================================
-# Orquestração
-apache-airflow[postgres]==2.8.4          # pendulum 3+ já OK com Py3.11
-
-# ---------------------------------------
-# Conexão PostgreSQL (já incluída no extra [postgres], mas explícita não faz mal)
+# — Demais libs (instaladas depois, sem constraints)
 psycopg2-binary==2.9.9
+SQLAlchemy>=1.4,<2.0
 
-# ---------------------------------------
-# ORM
-SQLAlchemy>=1.4,<2.0                    # Airflow 2.x não suporta SQLAlchemy 2
-
-# ---------------------------------------
-# Leitura Excel
-openpyxl>=3.1,<3.3
-
-# ---------------------------------------
-# API
-fastapi>=0.110,<0.113
-uvicorn[standard]>=0.27,<0.29
+fastapi>=0.112,<0.113        # usa Pydantic 2
+uvicorn[standard]>=0.28,<0.29
+numpy>=1.26,<2.0
+pandas>=2.1,<3.0
