--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-# — Demais libs (instaladas depois, sem constraints)
+# Conexão com PostgreSQL
 psycopg2-binary==2.9.9
+
+# SQLAlchemy 1.4.x (compatível com pandas 2.x e to_sql)
 SQLAlchemy>=1.4,<2.0
 
-fastapi>=0.112,<0.113        # usa Pydantic 2
-uvicorn[standard]>=0.28,<0.29
+# Leitura de Excel
+openpyxl>=3.1.2
+
+# Ciência de dados e ETL
 numpy>=1.26,<2.0
 pandas>=2.1,<3.0
+
+# APIs e Backend
+fastapi>=0.112,<0.113        # compatível com Pydantic 2
+uvicorn[standard]>=0.28,<0.29
